# new-orbit

./: .gitignore  bond displayer diagram.xopp  package-lock.json  package.json
Ibm_course/: Commands.txt  MainNotes.txt  build-resources.yml  deployement-resources.yml
apps/TutorialApp/: Readme.txt
apps/basic-bond-displayer/: README.md  package-lock.json  package.json
apps/cpp-rabbitmq-sample/: CMakeLists.txt  Dockerfile-client  Dockerfile-server  README.md  openshift commands.txt
apps/cpp-rabbitmq-sample/src/: CMakeLists.txt  mongo-test.cpp  receive.cpp  send.cpp  utils.cpp  utils.hpp
apps/cpp-streamer/: CMakeLists.txt  Dockerfile  WebsocketServer.cpp  WebsocketServer.h  openshift commands.txt  server.cpp  test-page-local.html  test-page-openshift.html
apps/instrument-enricher/: README.md  pom.xml
apps/instrument-importer/: 20200709.csv  example_vanilla_bond.json  openshift commands.txt  pom.xml  vanilla_bond_model.json
apps/instrument-server/: README.md  pom.xml
apps/instrument-streamer/: README.md  pom.xml  test-page-local.html  test-page-openshift.html
apps/instrument-verifier/: bonds.csv
apps/log-displayer/: README.md  package-lock.json  package.json
apps/log-server/: Dockerfile  README.md  go.mod  go.sum  main.go
apps/online-shop/: Readme.txt  UseFullCommands.txt  UsefulCheatSheetCmds.txt  Webservices.txt  copyFromSource.bash  create-projects.bash  test-em-all.bash  (+1 more)
commands/: richard_commands.txt
docs/: AdrInstall.txt
openshift-learning-journal/: Basic_Terminologies_and_Concept.md  Useful_Commands.md  Useful_Websites_and_Tutorials.md
(+83 files in other folders)
